[metadata]
name = k8sapp-istio
summary = StarlingX sysinv extensions for istio
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_istio

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    istio = systemconfig.helm_plugins.istio

systemconfig.helm_plugins.istio =
    001_istio-operator = k8sapp_istio.helm.istio_operator:IstioHelm
    002_kiali-server = k8sapp_istio.helm.kiali_server:KialiHelm

[wheel]
universal = 1
